# shellAdi

./: Cargo.toml  README.md  run.sh
src/: cli.rs  commands.rs  executor.rs  main.rs  utils.rs
