[package]
name = "shellAdi"
version = "0.1.0"
edition = "2024"
authors = ["Aditya sehrawataditya22@gmail.com"]

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = "4.5.31"
pathsearch = "0.2.0"
thiserror = "2.0.11" 
dirs = "6.0.0"